2006-10-30 Jens Tkotz <jens@peino.de> 1.6-alpha2-svn-b24

 * Change: Added field $initialized to albumDB()
    - Better error handling.

 * Change: Added $allowedInvalidAlbums to albumDB()
    - You can now easier define whats allowed. e.g. "lost+found"

 * Fix: removed -v from jhead call, as the structure is different.

 * New: function generateCaption()

 * Change: Little code cleanup in popups/save_photos.php

 * Change: Added additional param to getItemCaptureDate().

2006-10-30 Jens Tkotz <jens@peino.de> 1.6-alpha2-svn-b23

 * CHANGE: description is now a fixed item field, not a custom
     - album version bump
     - tweaked edit_caption and photo view.
     - remoced description as default custom field from config
     - new methods getDescription() and setDescription

   NOTE: This means the description is CURRENTLY not migrated to G2
  
 * New: Implemented call of progressbar update for album updates.

 * Change: Better error display when adding items.

2006-10-30 Jens Tkotz <jens@peino.de> 1.6-alpha2-svn-b22

 * Change: Added backround images for header and adminbar.

2006-10-29 Jens Tkotz <jens@peino.de> 1.6-alpha2-svn-b21

 * Fix: "disco1" is no ImageMagick binary ;)

2006-10-29 Jens Tkotz <jens@peino.de> 1.6-alpha2-svn-b20

 * New: Progressbar
     - function addProgressbar().
     - javascript to update the progressbar.
     - css for progessbar.

 * Change: Use progressbar in album update.

2006-10-28 Jens Tkotz <jens@peino.de> 1.6-alpha2-svn-b19

 * CHANGE: Removed Js function localGetElementsByTagName() and
	   nnGetAllLayers.
	   So the config wizard does NOT WORK IN Netscape 4 anymore !

 * Change: Again nicifying in config wizard.
	   Put longer messages in step 1 into a toggle Box.

 * Change: Typo toogle -> toggle (Is there something well known with *oogle ?).

 * Fix: typo in step 1, "nogo" is no type for infoBoxes.

 * Change: indenting and " to ' convertion.

 * Change: Use of galleryTable() in step 1, along with css adjustment.
