@@ -1,3 +1,9 @@
+2006-10-30 Jens Tkotz <jens@peino.de> 1.6-alpha2-svn-b25
+
+ * Fix: Upgrade message in welcome.inc was showed in too many cases.
+
+ * Change: Little code cleanup in popups/save_photos.php
+
 2006-10-30 Jens Tkotz <jens@peino.de> 1.6-alpha2-svn-b24
 
  * Change: Added field $initialized to albumDB()
@@ -9,8 +15,6 @@
  * Fix: removed -v from jhead call, as the structure is different.
 
  * New: function generateCaption()
-
- * Change: Little code cleanup in popups/save_photos.php
 
  * Change: Added additional param to getItemCaptureDate().
 
